# agenticraft-foundation

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/DISCUSSION_TEMPLATE/: ideas.yml  questions.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  docs-deploy.yml  release.yml
api/: index.html
api/algebra/: index.html
api/complexity/: index.html
api/integration/: index.html
api/mpst/: index.html
api/protocols/: index.html
api/specifications/: index.html
api/topology/: index.html
api/types/: index.html
api/verification/: index.html
changelog/: index.html
concepts/: index.html
concepts/complexity/: index.html
concepts/consensus/: index.html
concepts/process-algebra/: index.html
concepts/protocol-graph/: index.html
concepts/session-types/: index.html
concepts/spectral-topology/: index.html
concepts/verification/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  faq.md  index.md
docs/api/: index.md  types.md
docs/concepts/: comparison.md  complexity.md  consensus.md  index.md  process-algebra.md  protocol-graph.md  scalability.md  session-types.md  spectral-topology.md  verification.md
docs/examples/: consensus-spec.md  counterexample-generation.md  csp-composition.md  index.md  interrupt-timeout.md  mesh-topology.md  probabilistic-verification.md  protocol-verification.md  rag-pipeline-verification.md  temporal-verification.md
docs/getting-started/: installation.md  quickstart.md  why-formal-methods.md
docs/javascripts/: diagrams.js  mathjax.js
docs/tutorials/: consensus-verification.md  csp-coordination.md  index.md  mpst-verification.md  probabilistic-analysis.md  protocol-routing.md  temporal-verification.md  topology-analysis.md
examples/: consensus_spec.py  counterexample_generation.py  csp_composition.py  index.html  interrupt_timeout.py  mesh_topology.py  probabilistic_verification.py  protocol_verification.py  rag_pipeline_verification.py  task_queue.py  temporal_verification.py
examples/consensus-spec/: index.html
examples/counterexample-generation/: index.html
examples/csp-composition/: index.html
examples/interrupt-timeout/: index.html
examples/mesh-topology/: index.html
examples/probabilistic-verification/: index.html
examples/protocol-verification/: index.html
examples/temporal-verification/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/why-formal-methods/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_serialization.py
tutorials/: index.html
(+178 files in other folders)
